--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^5.0.0-alpha.34",
+    "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/icons": "^5.0.0-alpha.29",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/lab": "^5.0.0-alpha.34",
     "@material-ui/styles": "^5.0.0-alpha.33",
     "@theunderscorer/when": "^1.0.1",
     "@tshio/security-client": "^0.0.20",
