--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "nx run-many --target=test --all",
     "lint": "nx run-many --target=lint --all --parallel --maxParallel=4",
     "e2e": "nx e2e",
+    "serve": "nx run-many --target=serve --parallel --projects=api,browser-extension --maxParallel=2",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -58,7 +59,7 @@
     "date-fns": "^2.21.3",
     "deepmerge": "^4.2.2",
     "document-register-element": "1.13.1",
-    "draft-js": "^0.11.7",
+    "draft-js": "TheUnderScorer/draft-js#master",
     "emittery": "^0.7.2",
     "fastify": "^3.14.1",
     "fastify-cors": "^0.2.0",
@@ -129,19 +130,19 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
-    "@nrwl/cli": "12.2.0",
-    "@nrwl/cypress": "12.2.0",
-    "@nrwl/eslint-plugin-nx": "12.2.0",
-    "@nrwl/express": "12.2.0",
-    "@nrwl/jest": "12.2.0",
-    "@nrwl/linter": "12.2.0",
-    "@nrwl/node": "12.2.0",
-    "@nrwl/nx-cloud": "12.0.2",
-    "@nrwl/react": "12.2.0",
-    "@nrwl/storybook": "12.2.0",
-    "@nrwl/tao": "12.2.0",
-    "@nrwl/web": "12.2.0",
-    "@nrwl/workspace": "12.2.0",
+    "@nrwl/cli": "12.3.5",
+    "@nrwl/cypress": "12.3.5",
+    "@nrwl/eslint-plugin-nx": "12.3.5",
+    "@nrwl/express": "12.3.5",
+    "@nrwl/jest": "12.3.5",
+    "@nrwl/linter": "12.3.5",
+    "@nrwl/node": "12.3.5",
+    "@nrwl/nx-cloud": "12.1.3",
+    "@nrwl/react": "12.3.5",
+    "@nrwl/storybook": "12.3.5",
+    "@nrwl/tao": "12.3.5",
+    "@nrwl/web": "12.3.5",
+    "@nrwl/workspace": "12.3.5",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
@@ -149,8 +150,8 @@
     "@semantic-release/npm": "^7.0.5",
     "@storybook/addon-actions": "^6.2.7",
     "@storybook/addon-docs": "^6.2.7",
-    "@storybook/addon-knobs": "^6.1.11",
-    "@storybook/react": "^6.1.11",
+    "@storybook/addon-knobs": "^6.2.7",
+    "@storybook/react": "^6.2.7",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "11.1.2",
@@ -192,6 +193,7 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "faker": "^5.5.2",
+    "fsevents": "^2.3.2",
     "jest": "26.2.2",
     "jest-mock-proxy": "^3.0.0",
     "matcher": "^4.0.0",
