--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gql-codegen": "graphql-codegen --config codegen.yml",
     "ts-node-dev": "TS_NODE_PROJECT=tsconfig.node.json ts-node-dev -r tsconfig-paths/register",
     "ts-node": "TS_NODE_PROJECT=tsconfig.node.json ts-node -r tsconfig-paths/register",
+    "test": "npm run ts-node apps/browser-extension-e2e/src/setup.ts",
     "gather-projects": "npm run ts-node tools/scripts/gatherProjects.ts --",
     "release": "npx semantic-release",
     "release:dry": "npx semantic-release -d"
@@ -82,7 +83,7 @@
     "notistack": "^1.0.5",
     "p-limit": "^3.1.0",
     "pg": "^8.5.1",
-    "playwright": "^1.11.0",
+    "playwright": "^1.12.0",
     "qs": "^6.5.2",
     "query-string": "^7.0.0",
     "re-resizable": "^6.9.0",
@@ -143,6 +144,7 @@
     "@nrwl/tao": "12.3.5",
     "@nrwl/web": "12.3.5",
     "@nrwl/workspace": "12.3.5",
+    "@playwright/test": "^1.12.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
