--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -170,7 +170,8 @@ jobs:
       - name: Run XVFB
         run: |
           export DISPLAY=:99.0
-          sh -e /etc/init.d/xvfb start
+          Xvfb :99 -ac &
+          sleep 5
 
       - name: Set Node.js 16.x
         uses: actions/setup-node@v2
