--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -188,4 +188,4 @@ jobs:
         run: npm ci --legacy-peer-deps && npm i ts-node -g
 
       - name: Test
-        run: npx nx run-many --target=test --projects=api,browser-extension --parallel --maxParallel=2
+        run: npx nx run browser-extension-e2e:e2e
