--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -187,5 +187,8 @@ jobs:
       - name: Install dependencies
         run: npm ci --legacy-peer-deps && npm i ts-node -g
 
+      - name: Build extension
+        run: npx nx build browser-extension --prod
+
       - name: Test
         run: npx nx run browser-extension-e2e:e2e
