chore: UI tweaks for conditional rules

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build --prod",
-    "test": "nx run-many --target=test --all",
+    "test": "npm run ts-node apps/browser-extension-e2e/src/setup.ts",
     "lint": "nx run-many --target=lint --all --parallel --maxParallel=4",
     "e2e": "nx e2e",
     "serve": "nx run-many --target=serve --parallel --projects=api,browser-extension --maxParallel=2",
@@ -28,7 +28,6 @@
     "gql-codegen": "graphql-codegen --config codegen.yml",
     "ts-node-dev": "TS_NODE_PROJECT=tsconfig.node.json ts-node-dev -r tsconfig-paths/register",
     "ts-node": "TS_NODE_PROJECT=tsconfig.node.json ts-node -r tsconfig-paths/register",
-    "test": "npm run ts-node apps/browser-extension-e2e/src/setup.ts",
     "gather-projects": "npm run ts-node tools/scripts/gatherProjects.ts --",
     "release": "npx semantic-release",
     "release:dry": "npx semantic-release -d"
@@ -99,6 +98,7 @@
     "react-infinite-scroll-component": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-shadow": "^19.0.2",
+    "react-truncate-markup": "^5.1.0",
     "react-use": "^17.2.4",
     "regenerator-runtime": "0.13.7",
     "remeda": "^0.0.27",
