--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
 
+      - name: Typecheck
+        run: npm run typecheck
+
       - name: Build
         run: npx nx build browser-extension --prod && npx nx build api --prod
 
