test: Add initial popup test

--- a/apps/browser-extension-e2e/tsconfig.json
+++ b/apps/browser-extension-e2e/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "files": [],
+  "files": ["./src/typings/global.d.ts"],
   "include": [],
   "references": [
     {
