--- a/apps/api/tsconfig.spec.json
+++ b/apps/api/tsconfig.spec.json
@@ -5,5 +5,6 @@
     "module": "commonjs",
     "types": ["jest", "node"]
   },
-  "include": ["**/*.spec.ts", "**/*.d.ts", "./src/tests/setupServer.ts"]
+  "include": ["**/*.spec.ts", "**/*.d.ts", "./src/tests/setupServer.ts"],
+  "files": ["../../typings/global/index.ts", "./src/typings/global/index.ts"]
 }
