--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@material-ui/styles": "^5.0.0-alpha.33",
     "@theunderscorer/when": "^1.0.1",
     "@tshio/security-client": "^0.0.20",
+    "@welldone-software/why-did-you-render": "^6.2.0",
     "apollo-link-rest": "^0.8.0-beta.0",
     "apollo-server-fastify": "3.0.0-alpha.3",
     "awilix": "^4.3.3",
@@ -94,7 +95,7 @@
     "react-dom": "17.0.2",
     "react-easy-emoji": "^1.4.0",
     "react-final-form": "^6.5.3",
-    "react-flow-renderer": "^9.5.1",
+    "react-flow-renderer": "^9.6.1",
     "react-hotkeys-hook": "^3.3.0",
     "react-infinite-scroll-component": "^6.0.0",
     "react-router-dom": "^5.2.0",
