--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "apollo-link-rest": "^0.8.0-beta.0",
     "apollo-server-fastify": "3.0.0-alpha.3",
     "awilix": "^4.3.3",
+    "aws-sdk": "^2.935.0",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "dagre": "^0.8.5",
@@ -206,7 +207,7 @@
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^4.2.4",
+    "typescript": "^4.3.4",
     "url-loader": "^3.0.0",
     "webpack": "4.46.0",
     "webpack-extension-reloader": "^1.1.4",
