--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -85,6 +85,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: hashicorp/setup-terraform@v1
+
       - name: Set Node.js 16.x
         uses: actions/setup-node@v2
         with:
@@ -100,6 +102,9 @@ jobs:
 
       - name: Start docker
         run: docker-compose up -d
+
+      - name: Setup localstack
+        run: cd deploy/local && terraform apply -auto-approve
 
       - name: Setup env
         run: cp .local.env.dist .local.env
