ci: Wait for localstack

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -104,7 +104,9 @@ jobs:
         run: docker-compose up -d
 
       - name: Setup localstack
-        run: cd deploy/local && terraform init && terraform apply -auto-approve
+        run: cd deploy/local && ./docker/localstack/wait-for-it.sh && terraform init && terraform apply -auto-approve
+        env:
+          AWS_S3_ENDPOINT: http://localhost:4566
 
       - name: Setup env
         run: cp .local.env.dist .local.env
@@ -161,7 +163,9 @@ jobs:
         run: docker-compose up -d
 
       - name: Setup localstack
-        run: cd deploy/local && terraform init && terraform apply -auto-approve
+        run: cd deploy/local && ./docker/localstack/wait-for-it.sh && terraform init && terraform apply -auto-approve
+        env:
+          AWS_S3_ENDPOINT: http://localhost:4566
 
       - name: Setup env
         run: cp .local.env.dist .local.env
@@ -192,7 +196,9 @@ jobs:
         run: docker-compose up -d
 
       - name: Setup localstack
-        run: cd deploy/local && terraform init && terraform apply -auto-approve
+        run: cd deploy/local && ./docker/localstack/wait-for-it.sh && terraform init && terraform apply -auto-approve
+        env:
+          AWS_S3_ENDPOINT: http://localhost:4566
 
       - name: Setup env
         run: cp .local.env.dist .local.env
