--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -101,10 +101,10 @@ jobs:
       - uses: leonardodino/setup-playwright@main
 
       - name: Start docker
-        run: docker-compose up -d
+        run: docker-compose up -d && ./docker/localstack/wait-for-it.sh
 
       - name: Setup localstack
-        run: cd deploy/local && ./docker/localstack/wait-for-it.sh && terraform init && terraform apply -auto-approve
+        run: cd deploy/local && terraform init && terraform apply -auto-approve
         env:
           AWS_S3_ENDPOINT: http://localhost:4566
 
@@ -160,10 +160,10 @@ jobs:
           node-version: 16.x
 
       - name: Start docker
-        run: docker-compose up -d
+        run: docker-compose up -d && ./docker/localstack/wait-for-it.sh
 
       - name: Setup localstack
-        run: cd deploy/local && ./docker/localstack/wait-for-it.sh && terraform init && terraform apply -auto-approve
+        run: cd deploy/local && terraform init && terraform apply -auto-approve
         env:
           AWS_S3_ENDPOINT: http://localhost:4566
 
@@ -193,10 +193,10 @@ jobs:
         run: npx playwright install-deps
 
       - name: Start docker
-        run: docker-compose up -d
+        run: docker-compose up -d && ./docker/localstack/wait-for-it.sh
 
       - name: Setup localstack
-        run: cd deploy/local && ./docker/localstack/wait-for-it.sh && terraform init && terraform apply -auto-approve
+        run: cd deploy/local && terraform init && terraform apply -auto-approve
         env:
           AWS_S3_ENDPOINT: http://localhost:4566
 
