ci: Wait for localstack in separate step

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -101,7 +101,10 @@ jobs:
       - uses: leonardodino/setup-playwright@main
 
       - name: Start docker
-        run: sudo docker-compose up -d && ./docker/localstack/wait-for-it.sh
+        run: sudo docker-compose up -d
+
+      - name: Wait for localstack
+        run: sudo sh docker/localstack/wait-for-it.sh
 
       - name: Setup localstack
         run: cd deploy/local && terraform init && terraform apply -auto-approve
@@ -160,7 +163,10 @@ jobs:
           node-version: 16.x
 
       - name: Start docker
-        run: sudo docker-compose up -d && ./docker/localstack/wait-for-it.sh
+        run: sudo docker-compose up -d
+
+      - name: Wait for localstack
+        run: sudo sh docker/localstack/wait-for-it.sh
 
       - name: Setup localstack
         run: cd deploy/local && terraform init && terraform apply -auto-approve
@@ -193,7 +199,10 @@ jobs:
         run: npx playwright install-deps
 
       - name: Start docker
-        run: sudo docker-compose up -d && ./docker/localstack/wait-for-it.sh
+        run: sudo docker-compose up -d
+
+      - name: Wait for localstack
+        run: sudo sh docker/localstack/wait-for-it.sh
 
       - name: Setup localstack
         run: cd deploy/local && terraform init && terraform apply -auto-approve
