--- a/.local.env.dist
+++ b/.local.env.dist
@@ -18,14 +18,15 @@ SECURITY_HOST=localhost
 SECURITY_API_KEY=b6cfcd8f-db8e-2cb5-cb34-e1a8900067fd
 REACT_APP_API_URL=http://localhost:5000/graphql
 REACT_APP_SECURITY_URL=http://localhost:50050/api
-AWS_SQS_REGION = eu-west-1
+AWS_REGION = eu-west-1
 AWS_ACCOUNT_ID = root
-AWS_ACCESS_KEY_ID=accessKeyID
-AWS_SECRET_ACCESS_KEY=secretAccessKey
-AWS_SQS_ENDPOINT_URL=http://localhost:9324
-AWS_SQS_START_RUNNER_QUEUE_URL=http://localhost:9324/queue/StartRunner.fifo
-AWS_SQS_RUNNER_COMPLETED_QUEUE_URL=http://localhost:9324/queue/RunnerCompleted.fifo
-AWS_SQS_MESSAGE_TEST_QUEUE_URL=http://localhost:9324/queue/MessageQueueTest.fifo
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
+AWS_SQS_ENDPOINT_URL=http://localhost:4566
+AWS_SQS_SCRAPPER_CHROMIUM_QUEUE_URL=http://localhost:4566/000000000000/local-scrapper-chromium.fifo
+AWS_SQS_SCRAPPER_WEBKIT_QUEUE_URL=http://localhost:4566/000000000000/local-scrapper-webkit.fifo
+AWS_SQS_SCRAPPER_MOZILLA_QUEUE_URL=http://localhost:4566/000000000000/local-scrapper-mozilla.fifo"
+AWS_SQS_MESSAGE_TEST_QUEUE_URL=http://localhost:4566/000000000000/local-message-queue-test.fifo
 AWS_SQS_API_VERSION=2012-11-05
 REDIS_HOST=localhost
 REDIS_PORT=6379
