chore: Initial serverless setup

--- a/nx.json
+++ b/nx.json
@@ -141,6 +141,9 @@
     "frontend-ui": {
       "tags": []
     },
+    "lambdas": {
+      "tags": []
+    },
     "shared-common": {
       "tags": []
     },
