--- a/package.json
+++ b/package.json
@@ -204,6 +204,8 @@
     "mockzilla": "^0.9.0",
     "mockzilla-webextension": "^0.9.0",
     "prettier": "2.2.1",
+    "serverless-offline": "^7.0.0",
+    "serverless-webpack": "^5.5.1",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
