--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "@testing-library/react": "11.1.2",
     "@testing-library/react-hooks": "^5.1.1",
     "@testing-library/user-event": "^13.1.1",
+    "@types/aws-lambda": "^8.10.77",
     "@types/chrome": "^0.0.134",
     "@types/dagre": "^0.7.44",
     "@types/draft-js": "^0.11.3",
@@ -205,6 +206,7 @@
     "mockzilla-webextension": "^0.9.0",
     "prettier": "2.2.1",
     "serverless-offline": "^7.0.0",
+    "serverless-offline-sqs": "^4.1.1",
     "serverless-webpack": "^5.5.1",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
