--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "p-limit": "^3.1.0",
     "pg": "^8.5.1",
     "playwright": "^1.12.0",
+    "playwright-aws-lambda": "^0.7.0",
+    "playwright-core": "^1.12.3",
     "qs": "^6.5.2",
     "query-string": "^7.0.0",
     "re-resizable": "^6.9.0",
