--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -91,7 +91,6 @@
       "@scrapper-gate/frontend/keyboard-shortcuts": [
         "libs/frontend/keyboard-shortcuts/src/index.ts"
       ],
-      "@scrapper-gate/frontend/logger": ["libs/frontend/logger/src/index.ts"],
       "@scrapper-gate/frontend/schema": ["libs/frontend/schema/src/index.ts"],
       "@scrapper-gate/frontend/snackbars": [
         "libs/frontend/snackbars/src/index.ts"
@@ -119,6 +118,9 @@
       ],
       "@scrapper-gate/shared/errors": ["libs/shared/errors/src/index.ts"],
       "@scrapper-gate/shared/logger": ["libs/shared/logger/src/index.ts"],
+      "@scrapper-gate/shared/logger/console": [
+        "libs/shared/logger/console/src/index.ts"
+      ],
       "@scrapper-gate/shared/routing": ["libs/shared/routing/src/index.ts"],
       "@scrapper-gate/shared/run-states": [
         "libs/shared/run-states/src/index.ts"
