chore: Update nx

--- a/nx.json
+++ b/nx.json
@@ -183,5 +183,13 @@
     "shared-validation": {
       "tags": []
     }
+  },
+  "targetDependencies": {
+    "build": [
+      {
+        "target": "build",
+        "projects": "dependencies"
+      }
+    ]
   }
 }
