--- a/package.json
+++ b/package.json
@@ -137,19 +137,19 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
-    "@nrwl/cli": "12.4.0",
-    "@nrwl/cypress": "12.4.0",
-    "@nrwl/eslint-plugin-nx": "12.4.0",
-    "@nrwl/express": "12.4.0",
-    "@nrwl/jest": "12.4.0",
-    "@nrwl/linter": "12.4.0",
-    "@nrwl/node": "12.4.0",
-    "@nrwl/nx-cloud": "12.2.4",
-    "@nrwl/react": "12.4.0",
-    "@nrwl/storybook": "12.4.0",
-    "@nrwl/tao": "12.4.0",
-    "@nrwl/web": "12.4.0",
-    "@nrwl/workspace": "12.4.0",
+    "@nrwl/cli": "12.5.7",
+    "@nrwl/cypress": "12.5.7",
+    "@nrwl/eslint-plugin-nx": "12.5.7",
+    "@nrwl/express": "12.5.7",
+    "@nrwl/jest": "12.5.7",
+    "@nrwl/linter": "12.5.7",
+    "@nrwl/node": "12.5.7",
+    "@nrwl/nx-cloud": "12.2.7",
+    "@nrwl/react": "12.5.7",
+    "@nrwl/storybook": "12.5.7",
+    "@nrwl/tao": "12.5.7",
+    "@nrwl/web": "12.5.7",
+    "@nrwl/workspace": "12.5.7",
     "@playwright/test": "^1.12.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
@@ -158,8 +158,8 @@
     "@semantic-release/npm": "^7.0.5",
     "@storybook/addon-actions": "^6.2.7",
     "@storybook/addon-docs": "^6.2.7",
-    "@storybook/addon-knobs": "^6.2.7",
-    "@storybook/react": "^6.2.7",
+    "@storybook/addon-knobs": "~6.3.0",
+    "@storybook/react": "~6.3.0",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "11.1.2",
@@ -207,7 +207,7 @@
     "matcher": "^4.0.0",
     "mockzilla": "^0.9.0",
     "mockzilla-webextension": "^0.9.0",
-    "prettier": "2.2.1",
+    "prettier": "2.3.2",
     "serverless-offline": "^7.0.0",
     "serverless-offline-sqs": "^4.1.1",
     "serverless-webpack": "^5.5.1",
@@ -219,7 +219,8 @@
     "webpack": "4.46.0",
     "webpack-extension-reloader": "^1.1.4",
     "webpack-target-webextension": "^0.4.0",
-    "yargs": "^15.4.1"
+    "yargs": "^15.4.1",
+    "@storybook/addon-essentials": "~6.3.0"
   },
   "release": {
     "branches": [
