--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "apollo-server-fastify": "3.0.0-alpha.3",
     "awilix": "^4.3.3",
     "aws-sdk": "^2.935.0",
+    "chrome-aws-lambda": "^10.0.0",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "dagre": "^0.8.5",
+    "dataloader": "^2.0.0",
     "date-fns": "^2.21.3",
     "deepmerge": "^4.2.2",
     "document-register-element": "1.13.1",
@@ -88,7 +90,6 @@
     "p-limit": "^3.1.0",
     "pg": "^8.5.1",
     "playwright": "^1.12.0",
-    "playwright-aws-lambda": "^0.7.0",
     "playwright-core": "^1.12.3",
     "qs": "^6.5.2",
     "query-string": "^7.0.0",
@@ -114,7 +115,7 @@
     "ts-key-enum": "^2.0.7",
     "tslib": "^2.0.0",
     "type-fest": "^1.0.2",
-    "typeorm": "^0.2.32",
+    "typeorm": "^0.2.34",
     "unique-selector": "^0.5.0",
     "use-context-selector": "^1.3.7",
     "use-query-params": "^1.2.2",
