--- a/apps/lambdas/tsconfig.app.json
+++ b/apps/lambdas/tsconfig.app.json
@@ -5,7 +5,8 @@
     "types": ["node"],
     "target": "ES6",
     "moduleResolution": "node",
-    "sourceMap": true
+    "sourceMap": true,
+    "outDir": "../../dist/out-tsc"
   },
   "exclude": ["**/*.spec.ts"],
   "include": ["**/*.ts"]
