--- a/apps/lambdas/tsconfig.spec.json
+++ b/apps/lambdas/tsconfig.spec.json
@@ -1,10 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "composite": true,
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
     "types": ["jest", "node"]
   },
-  "include": ["**/*.spec.ts", "**/*.d.ts"]
+  "include": ["**/*.spec.ts", "**/*.d.ts"],
+  "files": ["../../typings/global/index.ts", "./src/typings/global/index.ts"]
 }
