--- a/package.json
+++ b/package.json
@@ -139,20 +139,21 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
-    "@nrwl/cli": "12.5.7",
-    "@nrwl/cypress": "12.5.7",
-    "@nrwl/eslint-plugin-nx": "12.5.7",
-    "@nrwl/express": "12.5.7",
-    "@nrwl/jest": "12.5.7",
-    "@nrwl/linter": "12.5.7",
-    "@nrwl/node": "12.5.7",
-    "@nrwl/nx-cloud": "12.2.7",
-    "@nrwl/react": "12.5.7",
-    "@nrwl/storybook": "12.5.7",
-    "@nrwl/tao": "12.5.7",
-    "@nrwl/web": "12.5.7",
-    "@nrwl/workspace": "12.5.7",
+    "@nrwl/cli": "12.6.3",
+    "@nrwl/cypress": "12.6.3",
+    "@nrwl/eslint-plugin-nx": "12.6.3",
+    "@nrwl/express": "12.6.3",
+    "@nrwl/jest": "12.6.3",
+    "@nrwl/linter": "12.6.3",
+    "@nrwl/node": "12.6.3",
+    "@nrwl/nx-cloud": "12.3.5",
+    "@nrwl/react": "12.6.3",
+    "@nrwl/storybook": "12.6.3",
+    "@nrwl/tao": "12.6.3",
+    "@nrwl/web": "12.6.3",
+    "@nrwl/workspace": "12.6.3",
     "@playwright/test": "^1.12.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.2",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
@@ -189,12 +190,12 @@
     "@types/tinycolor2": "^1.4.2",
     "@types/uuid": "^8.3.0",
     "@types/webpack": "4.41.21",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "4.28.5",
+    "@typescript-eslint/parser": "4.28.5",
     "babel-jest": "26.2.2",
     "babel-loader": "8.1.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "cypress": "^6.0.1",
+    "copy-webpack-plugin": "^9.0.1",
+    "cypress": "^8.1.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "8.1.0",
@@ -208,19 +209,27 @@
     "jest": "27.0.3",
     "jest-mock-proxy": "^3.0.0",
     "matcher": "^4.0.0",
+    "mini-css-extract-plugin": "^2.1.0",
     "mockzilla": "^0.9.0",
     "mockzilla-webextension": "^0.9.0",
     "prettier": "2.3.2",
+    "react-refresh": "^0.10.0",
     "serverless-offline": "^7.0.0",
     "serverless-offline-sqs": "^4.1.1",
     "serverless-webpack": "^5.5.1",
+    "source-map-loader": "^3.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^4.3.4",
+    "typescript": "4.3.5",
     "url-loader": "^3.0.0",
-    "webpack": "4.46.0",
+    "webpack": "^5.47.0",
+    "webpack-dev-server": "4.0.0-rc.0",
     "webpack-extension-reloader": "^1.1.4",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-sources": "^3.0.2",
     "webpack-target-webextension": "^0.4.0",
     "yargs": "^15.4.1"
   },
