build(browser-extension): Fix webpack5 build

--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,7 @@ provider:
   runtime: nodejs14.x
   stage: ${opt:stage, 'local'}
   region: eu-west-1
+  lambdaHashingVersion: 20201221
 
 functions:
   scrapperRunnerChromium:
