--- a/package.json
+++ b/package.json
@@ -220,7 +220,7 @@
     "source-map-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "27.0.3",
-    "ts-node": "~9.1.1",
+    "ts-node": "^10.2.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "4.3.5",
     "url-loader": "^3.0.0",
