--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scrapper-gate",
-  "version": "1.9.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "nx": "nx",
@@ -239,11 +239,7 @@
       "master",
       "next",
       {
-        "name": "alpha",
-        "prerelease": true
-      },
-      {
-        "name": "beta",
+        "name": "test",
         "prerelease": true
       }
     ],
