--- a/libs/frontend/ui/.storybook/tsconfig.json
+++ b/libs/frontend/ui/.storybook/tsconfig.json
@@ -9,5 +9,6 @@
     "../**/*.spec.tsx",
     "../**/*.spec.jsx"
   ],
-  "include": ["../src/**/*", "*.js"]
+  "include": ["../src/**/*", "*.js"],
+  "files": ["../../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts"]
 }
