--- a/package.json
+++ b/package.json
@@ -140,19 +140,19 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
-    "@nrwl/cli": "12.6.3",
-    "@nrwl/cypress": "12.6.3",
-    "@nrwl/eslint-plugin-nx": "12.6.3",
-    "@nrwl/express": "12.6.3",
-    "@nrwl/jest": "12.6.3",
-    "@nrwl/linter": "12.6.3",
-    "@nrwl/node": "12.6.3",
-    "@nrwl/nx-cloud": "12.3.5",
-    "@nrwl/react": "12.6.3",
-    "@nrwl/storybook": "12.6.3",
-    "@nrwl/tao": "12.6.3",
-    "@nrwl/web": "12.6.3",
-    "@nrwl/workspace": "12.6.3",
+    "@nrwl/cli": "12.8.0",
+    "@nrwl/cypress": "12.8.0",
+    "@nrwl/eslint-plugin-nx": "12.8.0",
+    "@nrwl/express": "12.8.0",
+    "@nrwl/jest": "12.8.0",
+    "@nrwl/linter": "12.8.0",
+    "@nrwl/node": "12.8.0",
+    "@nrwl/nx-cloud": "12.3.10",
+    "@nrwl/react": "12.8.0",
+    "@nrwl/storybook": "12.8.0",
+    "@nrwl/tao": "12.8.0",
+    "@nrwl/web": "12.8.0",
+    "@nrwl/workspace": "12.8.0",
     "@playwright/test": "^1.12.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.2",
     "@semantic-release/changelog": "^5.0.1",
@@ -197,7 +197,7 @@
     "babel-loader": "8.1.0",
     "copy-webpack-plugin": "^9.0.1",
     "cypress": "^8.1.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "10.0.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
