--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,8 +5,8 @@ on:
       - '*'
 
 jobs:
-  build:
-    name: Build
+  typecheck:
+    name: Typecheck
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -22,10 +22,28 @@ jobs:
       - name: Typecheck
         run: npm run typecheck
 
+  build:
+    needs:
+      - typecheck
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
+
       - name: Build
         run: npx nx build browser-extension --prod && npx nx build api --prod
 
   lint:
+    needs:
+      - typecheck
     name: Run linter
     runs-on: ubuntu-latest
     steps:
@@ -54,6 +72,8 @@ jobs:
         run: npm run lint
 
   test-shared:
+    needs:
+      - typecheck
     name: Run shared tests
     runs-on: ubuntu-latest
     steps:
@@ -80,6 +100,8 @@ jobs:
           npx nx run-many --target=test --projects=$PROJECTS --parallel --maxParallel=2
 
   test-backend:
+    needs:
+      - typecheck
     name: Run backend tests
     runs-on: ubuntu-latest
     steps:
@@ -122,6 +144,8 @@ jobs:
           npx nx run-many --target=test --projects=$PROJECTS --parallel --maxParallel=2
 
   test-frontend:
+    needs:
+      - typecheck
     name: Run frontend tests
     runs-on: ubuntu-latest
     steps:
@@ -148,6 +172,8 @@ jobs:
           npx nx run-many --target=test --projects=$PROJECTS --parallel --maxParallel=2
 
   test-apps:
+    needs:
+      - typecheck
     name: Run apps tests
     runs-on: ubuntu-latest
     steps:
@@ -179,6 +205,8 @@ jobs:
         run: npx nx run-many --target=test --projects=api,browser-extension --parallel --maxParallel=2
 
   test-e2e:
+    needs:
+      - typecheck
     name: Run e2e tests
     runs-on: ubuntu-latest
     steps:
