--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "webextension-polyfill": "^0.7.0",
     "webextension-polyfill-ts": "^0.25.0",
     "webpack-bundle-analyzer": "^4.4.1",
+    "write-file-webpack-plugin": "^4.5.1",
     "zustand": "^3.3.3"
   },
   "devDependencies": {
@@ -209,6 +210,7 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "faker": "^5.5.2",
+    "fs-extra": "^10.0.0",
     "jest": "27.0.3",
     "jest-image-snapshot": "^4.5.1",
     "jest-mock-proxy": "^3.0.0",
@@ -227,9 +229,9 @@
     "ts-node": "^10.2.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "4.3.5",
-    "url-loader": "^3.0.0",
-    "webpack": "^5.47.0",
-    "webpack-dev-server": "4.0.0-rc.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.51.1",
+    "webpack-dev-server": "4.1.0",
     "webpack-extension-reloader": "^1.1.4",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0",
