--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "typeorm": "^0.2.37",
     "unique-selector": "^0.5.0",
     "use-context-selector": "^1.3.7",
-    "use-query-params": "^1.2.2",
+    "use-query-params": "^1.2.3",
     "uuid": "^3.4.0",
     "webextension-polyfill": "^0.7.0",
     "webextension-polyfill-ts": "^0.25.0",
@@ -129,6 +129,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
+    "@babel/runtime": "^7.15.4",
     "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
     "@babel/preset-typescript": "7.9.0",
