chore: Update apollo server to 3

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@tshio/security-client": "^0.0.20",
     "@welldone-software/why-did-you-render": "^6.2.0",
     "apollo-link-rest": "^0.8.0-beta.0",
-    "apollo-server-fastify": "3.0.0-alpha.3",
+    "apollo-server-fastify": "3.3.0",
     "awilix": "^4.3.3",
     "aws-sdk": "^2.935.0",
     "chrome-aws-lambda": "^10.0.0",
