--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "playwright": "^1.12.0",
     "playwright-core": "^1.12.3",
     "qs": "^6.5.2",
-    "query-string": "^7.0.0",
+    "query-string": "7.0.1",
     "re-resizable": "^6.9.0",
     "react": "17.0.2",
     "react-contenteditable": "^3.3.5",
@@ -101,6 +101,7 @@
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2",
     "react-easy-emoji": "^1.4.0",
+    "react-error-boundary": "^3.1.3",
     "react-final-form": "^6.5.3",
     "react-flow-renderer": "^9.6.3",
     "react-hotkeys-hook": "^3.3.0",
@@ -119,7 +120,7 @@
     "typeorm": "^0.2.37",
     "unique-selector": "^0.5.0",
     "use-context-selector": "^1.3.7",
-    "use-query-params": "^1.2.3",
+    "use-query-params": "1.2.3",
     "uuid": "^3.4.0",
     "webextension-polyfill": "^0.7.0",
     "webextension-polyfill-ts": "^0.25.0",
@@ -129,10 +130,10 @@
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
-    "@babel/runtime": "^7.15.4",
     "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
     "@babel/preset-typescript": "7.9.0",
+    "@babel/runtime": "^7.15.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@graphql-codegen/add": "^2.0.2",
