--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build --prod",
+    "build:tools": "cd tools && tsc -p tsconfig.tools.json",
     "test": "npm run ts-node apps/browser-extension-e2e/src/setup.ts",
     "lint": "nx run-many --target=lint --all --parallel --maxParallel=4",
     "e2e": "nx e2e",
