--- a/package.json
+++ b/package.json
@@ -130,11 +130,11 @@
     "zustand": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@babel/preset-env": "7.9.6",
-    "@babel/preset-react": "7.9.4",
-    "@babel/preset-typescript": "7.9.0",
-    "@babel/runtime": "^7.15.4",
+    "@babel/core": "7.15.5",
+    "@babel/preset-env": "7.15.4",
+    "@babel/preset-react": "7.14.5",
+    "@babel/preset-typescript": "7.15.0",
+    "@babel/runtime": "7.15.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@graphql-codegen/add": "^2.0.2",
@@ -164,13 +164,13 @@
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.5",
-    "@storybook/addon-actions": "^6.3.4",
-    "@storybook/addon-docs": "^6.3.4",
-    "@storybook/addon-essentials": "^6.3.4",
-    "@storybook/addon-knobs": "^6.3.0",
-    "@storybook/builder-webpack5": "^6.3.7",
-    "@storybook/manager-webpack5": "^6.3.7",
-    "@storybook/react": "^6.3.4",
+    "@storybook/addon-actions": "6.3.8",
+    "@storybook/addon-docs": "6.3.8",
+    "@storybook/addon-essentials": "6.3.8",
+    "@storybook/addon-knobs": "6.3.1",
+    "@storybook/builder-webpack5": "6.3.8",
+    "@storybook/manager-webpack5": "6.3.8",
+    "@storybook/react": "6.3.8",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "11.1.2",
