fix: Replace draft-js with slate

--- a/libs/frontend/block-editor/.storybook/tsconfig.json
+++ b/libs/frontend/block-editor/.storybook/tsconfig.json
@@ -8,7 +8,7 @@
     "../../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts",
     "../../../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
     "../../../../node_modules/@nrwl/react/typings/image.d.ts",
-    "../src/typings/slate/index.d.ts"
+    "./../typings/slate/index.d.ts"
   ],
   "exclude": [
     "../**/*.spec.ts",
