--- a/libs/frontend/block-editor/tsconfig.json
+++ b/libs/frontend/block-editor/tsconfig.json
@@ -1,12 +1,16 @@
 {
-  "extends": "../../../../tsconfig.base.json",
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "react-jsx",
     "allowJs": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "files": ["../../block-editor/typings/slate/index.d.ts"],
+  "files": ["./typings/slate/index.d.ts"],
   "include": [],
   "references": [
     {
