--- a/libs/frontend/form/tsconfig.json
+++ b/libs/frontend/form/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-  "files": [],
+  "files": ["./src/typings/slate/index.d.ts"],
   "include": [],
   "references": [
     {
