--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -70,6 +70,9 @@
       "@scrapper-gate/frontend/api-client": [
         "libs/frontend/api-client/src/index.ts"
       ],
+      "@scrapper-gate/frontend/block-editor": [
+        "libs/frontend/block-editor/src/index.ts"
+      ],
       "@scrapper-gate/frontend/common": ["libs/frontend/common/src/index.ts"],
       "@scrapper-gate/frontend/data-grid": [
         "libs/frontend/data-grid/src/index.ts"
