--- a/libs/frontend/block-editor/tsconfig.spec.json
+++ b/libs/frontend/block-editor/tsconfig.spec.json
@@ -1,10 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../../../dist/out-tsc",
+    "outDir": "../../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"],
-    "files": ["../../block-editor/typings/slate/index.d.ts"]
+    "types": ["jest", "node"]
   },
   "include": [
     "**/*.spec.ts",
