--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "date-fns": "^2.21.3",
     "deepmerge": "^4.2.2",
     "document-register-element": "1.13.1",
-    "draft-js": "TheUnderScorer/draft-js#master",
     "emittery": "^0.7.2",
     "fastify": "^3.14.1",
     "fastify-cors": "^0.2.0",
@@ -114,6 +113,8 @@
     "regenerator-runtime": "0.13.7",
     "remeda": "^0.0.27",
     "scheduler": "^0.20.2",
+    "slate": "^0.65.3",
+    "slate-react": "^0.65.3",
     "tinycolor2": "^1.4.2",
     "ts-key-enum": "^2.0.7",
     "tslib": "^2.0.0",
@@ -179,7 +180,6 @@
     "@types/aws-lambda": "^8.10.77",
     "@types/chrome": "^0.0.134",
     "@types/dagre": "^0.7.44",
-    "@types/draft-js": "^0.11.3",
     "@types/express": "4.17.0",
     "@types/faker": "^5.5.0",
     "@types/highlight-words-core": "^1.2.0",
