test: Fix tests

--- a/.local.env.dist
+++ b/.local.env.dist
@@ -31,3 +31,4 @@ AWS_SQS_API_VERSION=2012-11-05
 REDIS_HOST=localhost
 REDIS_PORT=6379
 IGNORED_BROWSER_TYPES=Firefox,Safari
+TS_NODE_TRANSPILE_ONLY=true
