--- a/libs/frontend/block-editor/tsconfig.lib.json
+++ b/libs/frontend/block-editor/tsconfig.lib.json
@@ -8,7 +8,7 @@
   "files": [
     "../../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
     "../../../node_modules/@nrwl/react/typings/image.d.ts",
-    "./typings/slate/index.d.ts"
+    "./src/typings/slate/index.d.ts"
   ],
   "exclude": [
     "**/*.spec.ts",
