--- a/libs/frontend/domain/conditional-rules/tsconfig.spec.json
+++ b/libs/frontend/domain/conditional-rules/tsconfig.spec.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "files": ["../../block-editor/src/typings/slate/index.d.ts"]
   },
   "include": [
     "**/*.spec.ts",
