--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
     "mockzilla-webextension": "^0.9.0",
     "prettier": "2.3.2",
     "react-refresh": "^0.10.0",
+    "serverless": "2.58.0",
     "serverless-offline": "^7.0.0",
     "serverless-offline-sqs": "^4.1.1",
     "serverless-webpack": "^5.5.1",
