--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "license": "MIT",
   "scripts": {
     "nx": "nx",
+    "postnx": "node tools/removeFileExtensionFromTsPaths.mjs",
     "start": "nx serve",
     "build": "nx build --prod",
+    "remove-file-extensions-from-ts-paths": "node tools/removeFileExtensionFromTsPaths.mjs",
     "build:tools": "cd tools && tsc -p tsconfig.tools.json",
     "test": "npm run ts-node apps/browser-extension-e2e/src/setup.ts",
     "lint": "nx run-many --target=lint --all --parallel --maxParallel=4",
@@ -89,6 +91,7 @@
     "lodash.set": "^4.3.2",
     "notistack": "^2.0.1-alpha.5",
     "p-limit": "^3.1.0",
+    "p-pipe": "^4.0.0",
     "pg": "^8.5.1",
     "playwright": "^1.12.0",
     "playwright-core": "^1.12.3",
@@ -199,10 +202,12 @@
     "@types/webpack": "4.41.21",
     "@typescript-eslint/eslint-plugin": "4.28.5",
     "@typescript-eslint/parser": "4.28.5",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "babel-jest": "26.2.2",
     "babel-loader": "8.1.0",
     "copy-webpack-plugin": "^9.0.1",
     "cypress": "^8.1.0",
+    "depcheck": "^1.4.2",
     "dotenv": "10.0.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "8.1.0",
@@ -232,6 +237,7 @@
     "ts-jest": "27.0.3",
     "ts-node": "^10.2.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "ttypescript": "^1.5.12",
     "typescript": "4.3.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.51.1",
