--- a/nx.json
+++ b/nx.json
@@ -171,7 +171,10 @@
     "shared-domain-scrapper": {
       "tags": []
     },
-    "shared-domain-user": {
+    "shared-domain-scrapper-mocks": {
+      "tags": []
+    },
+    "shared-domain-user-mocks": {
       "tags": []
     },
     "shared-domain-variables": {
