--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,16 +32,15 @@ services:
       AWS_SQS_SCRAPPER_WEBKIT_QUEUE_URL: http://localstack:4566/000000000000/development-scrapper-webkit.fifo
       AWS_SQS_SCRAPPER_MOZILLA_QUEUE_URL: http://localstack:4566/000000000000/development-scrapper-mozilla.fifo
       AWS_SQS_MESSAGE_TEST_QUEUE_URL: http://localstack:4566/000000000000/development-message-queue-test.fifo
-      AWS_SQS_API_VERSION: 2012-11-05
+      AWS_SQS_API_VERSION: "2012-11-05"
       REDIS_HOST: redis
       REDIS_PORT: 6379
       IGNORED_BROWSER_TYPES: Firefox,Safari
-      TS_NODE_TRANSPILE_ONLY: true
     build:
       context: .
       dockerfile: apps/api/docker/Dockerfile
     ports:
-      - 3000:3000
+      - "3000:3000"
 
 networks:
   app:
