chore: Add browser extension envs to local.env

--- a/.local.env.dist
+++ b/.local.env.dist
@@ -32,3 +32,5 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 IGNORED_BROWSER_TYPES=Firefox,Safari
 TS_NODE_TRANSPILE_ONLY=true
+NX_API_URL=http://localhost:3000
+NX_SECURITY_URL=http://localhost:50050
