--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -126,7 +126,7 @@ jobs:
         run: sudo docker-compose up -d
 
       - name: Wait for localstack
-        run: sudo AWS_S3_ENDPOINT=http://localhost:4566 sh docker/localstack/wait-for-it.sh
+        run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
 
       - name: Setup localstack
         run: cd deploy/local && terraform init && terraform apply -auto-approve
@@ -202,7 +202,7 @@ jobs:
         run: sudo docker-compose up -d
 
       - name: Wait for localstack
-        run: sudo AWS_S3_ENDPOINT=http://localhost:4566 sh docker/localstack/wait-for-it.sh
+        run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
 
       - name: Setup localstack
         run: cd deploy/local && terraform init && terraform apply -auto-approve
@@ -238,7 +238,7 @@ jobs:
         run: sudo docker-compose up -d
 
       - name: Wait for localstack
-        run: sudo AWS_S3_ENDPOINT=http://localhost:4566 sh docker/localstack/wait-for-it.sh
+        run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
 
       - name: Setup localstack
         run: cd deploy/local && terraform init && terraform apply -auto-approve
