--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "release": "npx semantic-release",
     "release:dry": "npx semantic-release -d",
     "typecheck": "tsc --noEmit -p tsconfig.base.json",
-    "start-local-env": "sh scripts/start-local-env.sh"
+    "start-local-env": "node scripts/startLocalEnv.mjs"
   },
   "private": true,
   "dependencies": {
@@ -90,6 +90,7 @@
     "lodash.lowercase": "^4.3.0",
     "lodash.mapvalues": "^4.6.0",
     "lodash.set": "^4.3.2",
+    "node-fetch": "^3.0.0",
     "notistack": "^2.0.1-alpha.5",
     "p-limit": "^3.1.0",
     "p-pipe": "^4.0.0",
@@ -249,7 +250,8 @@
     "webpack-node-externals": "^3.0.0",
     "webpack-sources": "^3.0.2",
     "webpack-target-webextension": "^0.4.0",
-    "yargs": "^15.4.1"
+    "yargs": "^15.4.1",
+    "zx": "^4.2.0"
   },
   "release": {
     "branches": [
