feat(browser-extension): Add scrapper results list view

--- a/nx.json
+++ b/nx.json
@@ -38,6 +38,9 @@
     "backend-base-model": {
       "tags": []
     },
+    "backend-common": {
+      "tags": []
+    },
     "backend-cqrs": {
       "tags": []
     },
