--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -151,5 +151,6 @@
       ]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp"],
+  "files": ["node_modules/@nrwl/react/typings/image.d.ts"]
 }
