chore: Add "ttsc" executor

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {
     "nx": "nx",
-    "postnx": "node tools/removeFileExtensionFromTsPaths.mjs",
+    "postnx": "node tools/removeFileExtensionFromTsPaths.ts",
     "start": "nx serve",
     "build": "nx build --prod",
-    "remove-file-extensions-from-ts-paths": "node tools/removeFileExtensionFromTsPaths.mjs",
+    "remove-file-extensions-from-ts-paths": "node tools/removeFileExtensionFromTsPaths.ts",
     "build:tools": "cd tools && tsc -p tsconfig.tools.json",
+    "watch:tools": "npm run build:tools -- -w",
     "test": "npm run ts-node apps/browser-extension-e2e/src/setup.ts",
     "lint": "nx run-many --target=lint --all --parallel --maxParallel=4",
     "e2e": "nx e2e",
@@ -94,7 +95,7 @@
     "node-fetch": "^3.0.0",
     "notistack": "^2.0.1-alpha.5",
     "p-limit": "^3.1.0",
-    "p-pipe": "^4.0.0",
+    "p-pipe": "^3.1.0",
     "pg": "^8.5.1",
     "playwright": "^1.12.0",
     "playwright-core": "^1.12.3",
