--- a/tools/tsconfig.tools.json
+++ b/tools/tsconfig.tools.json
@@ -7,7 +7,8 @@
     "types": ["node"],
     "importHelpers": false,
     "resolveJsonModule": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "allowJs": true
   },
   "include": ["**/*.ts"],
   "exclude": ["./scripts/**/*.ts"]
