--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "npm:@mui/material@5.0.0",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/icons-material": "5.0.0",
     "@mui/lab": "^5.0.0-alpha.47",
     "@mui/material": "5.0.0",
     "@mui/styles": "5.0.0",
     "@mui/system": "^5.0.0",
-    "@material-ui/core": "npm:@mui/material@5.0.0",
     "@theunderscorer/when": "^1.0.1",
     "@tshio/security-client": "^0.0.20",
     "@welldone-software/why-did-you-render": "^6.2.0",
@@ -131,8 +131,7 @@
     "use-context-selector": "^1.3.7",
     "use-query-params": "1.2.3",
     "uuid": "^3.4.0",
-    "webextension-polyfill": "^0.7.0",
-    "webextension-polyfill-ts": "^0.25.0",
+    "webextension-polyfill": "^0.8.0",
     "webpack-bundle-analyzer": "^4.4.1",
     "write-file-webpack-plugin": "^4.5.1",
     "zustand": "^3.3.3"
@@ -203,6 +202,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/tinycolor2": "^1.4.2",
     "@types/uuid": "^8.3.0",
+    "@types/webextension-polyfill": "^0.8.0",
     "@types/webpack": "4.41.21",
     "@typescript-eslint/eslint-plugin": "4.31.2",
     "@typescript-eslint/parser": "4.31.2",
@@ -291,4 +291,3 @@
     ]
   }
 }
-
