fix(scrapper-runner): Use selectors from conditional rules as well

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,6 +34,9 @@
       "@scrapper-gate/backend/domain/auth": [
         "libs/backend/domain/auth/src/index.ts"
       ],
+      "@scrapper-gate/backend/domain/conditional-rules": [
+        "libs/backend/domain/conditional-rules/src/index.ts"
+      ],
       "@scrapper-gate/backend/domain/files": [
         "libs/backend/domain/files/src/index.ts"
       ],
