--- a/nx.json
+++ b/nx.json
@@ -56,6 +56,9 @@
     "backend-domain-auth": {
       "tags": []
     },
+    "backend-domain-conditional-rules": {
+      "tags": []
+    },
     "backend-domain-files": {
       "tags": []
     },
