--- a/libs/backend/domain/scrapper/playwright-runner/tsconfig.lib.json
+++ b/libs/backend/domain/scrapper/playwright-runner/tsconfig.lib.json
@@ -6,5 +6,5 @@
     "types": ["node"]
   },
   "include": ["**/*.ts"],
-  "exclude": ["**/*.spec.ts"]
+  "exclude": ["**/*.spec.ts", "**/__tests__/*.ts", "**/__mocks_-/*.ts"]
 }
