--- a/libs/backend/domain/scrapper/playwright-runner/tsconfig.spec.json
+++ b/libs/backend/domain/scrapper/playwright-runner/tsconfig.spec.json
@@ -10,6 +10,8 @@
     "**/*.spec.tsx",
     "**/*.spec.js",
     "**/*.spec.jsx",
-    "**/*.d.ts"
+    "**/*.d.ts",
+    "**/__tests__/*.ts",
+    "**/__mocks_-/*.ts",
   ]
 }
