--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
     "@types/faker": "^5.5.0",
     "@types/highlight-words-core": "^1.2.0",
     "@types/jest": "27.0.2",
+    "@types/jest-image-snapshot": "^4.3.1",
     "@types/lodash.capitalize": "^4.2.6",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.isempty": "^4.4.6",
