--- a/apps/browser-extension-e2e/tsconfig.spec.json
+++ b/apps/browser-extension-e2e/tsconfig.spec.json
@@ -5,6 +5,5 @@
     "module": "commonjs",
     "types": ["jest", "node"]
   },
-  "include": ["**/*.ts", "**/*.d.ts", "**/*.js", "**/*.spec.jsx", "**/*.d.ts"],
-  "files": ["./src/typings/global.d.ts"]
+  "include": ["**/*.ts", "**/*.d.ts", "**/*.js", "**/*.spec.jsx", "**/*.d.ts"]
 }
