--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -234,6 +234,9 @@ jobs:
       - name: Setup deps
         run: npx playwright install-deps
 
+      - uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
+
       - name: Start docker
         run: sudo docker-compose up -d
 
